GNOME Bugzilla – Bug 139310
Store online_id in split slot instead of transaction slot to avoid import conflicts
Last modified: 2018-06-29 20:42:34 UTC
Assume you have a transaction that transfers money from account 1 to account 2. Import an OFX statement from account 1 that matches the transaction. Then import an OFX statement from account 2 that matches the same transaction. Because each transaction can only store one online_id, when you import from account 1 again it doesn't remember that it's already been imported. If online_id was stored in a split slot instead of a transaction slot, it would allow tracking the online_id of both accounts without being overwritten.
still a problem in the latest gnucash version 2.2.5?
Thanks for your detailed report Jeremy. I've noticed this behavior myself on 2.2.4 and SVN trunk r17877. I agree with your proposed solution. For backwards/forwards compatibility, I think it should probably set/test the online_id in *both* the transaction (as before) and in the split.
GnuCash bug tracking has moved to a new Bugzilla host. The new URL for this bug is https://bugs.gnucash.org/show_bug.cgi?id=139310. Please continue processing the bug there and please update any external references or bookmarks.