Bug#139310: Store online_id in split instead of transaction to avoid import conflicts

Affects all users of the generic import: OFX, HBCI and AqBanking.

Suggested by <http://bugzilla.gnome.org/show_bug.cgi?id=139310>.
"
 Assume you have a transaction that transfers money from account 1 to account 2.
 Import an OFX statement from account 1 that matches the transaction.  Then
 import an OFX statement from account 2 that matches the same transaction.
 Because each transaction can only store one online_id, when you import from
 account 1 again it doesn't remember that it's already been imported.

 If online_id was stored in a split slot instead of a transaction slot, it would
 allow tracking the online_id of both accounts without being overwritten.
"

For backwards compatibility, we still check for online_id in transactions.
This is more of a convenience than a critical feature, however.
The compatibility code could be removed in future versions if desired.

Patch by Alan Jenkins <alan-jenkins@tuffmail.co.uk>

git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/trunk@17889 57a11ea4-9604-0410-9ed3-97b8803252fd