src/import-export/import-utilities.h
@@ -46,6 +46,20 @@ void gnc_import_set_trans_online_id(Transaction * transaction,
 				    const gchar * string_value);
 /** @} */
 
+gboolean gnc_import_trans_has_online_id(Transaction * transaction);
+
+/** @name Setter-getters
+    Setter and getter functions for the online_id kvp_frame for 
+    Splits.
+	@{
+*/ 
+const gchar * gnc_import_get_split_online_id(Split * split);
+void gnc_import_set_split_online_id(Split * split,
+				    const gchar * string_value);
+/** @} */
+
+gboolean gnc_import_split_has_online_id(Split * split);
+
 #endif
 /** @} */
 
